--- a/trial.html
+++ b/trial.html
@@ -8,5 +8,14 @@
 <body>
     <h1>trial it again</h1>
     <p>if you have an error just google it</p>
+    <ol>
+        <li>ad</li>
+        <li>soyad</li>
+    </ol>
+
+    <ol reversed>
+        <li>ad</li>
+        <li>soyad</li>
+    </ol>
 </body>
 </html>
