--- a/Task1.html
+++ b/Task1.html
@@ -41,7 +41,7 @@ video {
         </ul>
 </div>
 
-<img width="750" height="550" src="nmr.png" alt="NMR">
+<img width="550" height="500" src="nmr.png" title="NMR">
 <video width="750" height="550" src="Naxçıvan təbiəti- Batabat.mp4"controls></video>
 </body>
-</html>
+</html> 
