--- a/Task2.html
+++ b/Task2.html
@@ -5,26 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <body bgcolor="B4C6E0">
-    <table align="center">
-        <table style="border-collapse: collapse;margin-left: auto;margin-right: auto" border="1">
+<body bgcolor="B4C6E0">
+    <table style="border-collapse: collapse;margin-left: auto;margin-right: auto" border="1" align="center">
             <thead bgcolor="746DAF" >
                 <th colspan="5" width="15"><h5>Şagirdlər</h5></th>
-                    
             </thead>
+            <tr class="height"="40">
+            <tr align="center" bgcolor="AA8BC1">
+                <td rowspan="2" width="50"><h5>NO/</h5></td>
+                <td rowspan="2" width="50"><h5>Foto</h5></td>
+                <td rowspan="2" width="70"><h5>Ad Soyad</h5></td>
+                <td colspan="2"><h5>Əlaqə</h5></td>
+            </tr>
+            <tr align= "center" bgcolor="AA8BC1">
+                <td width="100"><h5>Tel 1</h5></td>
+                <td width="100"><h5>Tel 2</h5></td>
+            </tr>
             <tbody>
-                <tr class="height"="40">
-                <tr align="center" bgcolor="AA8BC1">
-                    <td rowspan="2" width="50"><h5>NO/</h5></td>
-                    <td rowspan="2" width="50"><h5>Foto</h5></td>
-                    <td rowspan="2" width="70"><h5>Ad Soyad</h5></td>
-                    <td colspan="2"><h5>Əlaqə</h5></td>
-                </tr>
-                <tr align= "center" bgcolor="AA8BC1">
-                    <td width="100"><h5>Tel 1</h5></td>
-                    <td width="100"><h5>Tel 2</h5></td>
-                </tr>
                 <tr align="center" bgcolor="D0E4E4" >
                     <td align="left"><small>1</small></td>
                     <td><img src="minion 1.jpg" width="30" height="30"></td>
