--- a/task3.html
+++ b/task3.html
@@ -18,9 +18,9 @@
         }
     </style>
 </head>
-
+ 
 <body bgcolor="35384B">
-    <table style="margin-left: auto;margin-right: auto;" border="1">
+    <table style="margin-left: auto;margin-right: auto;" border="1" width="700px">
         <thead bgcolor="B7E5B4">
             <th colspan="3">Müraciət et</th>
             <tr>
