--- a/Task4.html
+++ b/Task4.html
@@ -27,7 +27,8 @@
         <div class="div2">
             <img src="leosfriends.jpg">
             <h2>Son Akşam Yemeği</h2>
-            <p><span>Son Akşam Yemeği ya da Son Yemek</span> [İngilizce: The Last Supper (Dı Lest Sapır), İtalyanca: Il Cenacolo (İl
+            <p><span>Son Akşam Yemeği ya da Son Yemek</span> [İngilizce: The Last Supper (Dı Lest Sapır), İtalyanca: Il
+                Cenacolo (İl
                 Çenakolo) ya da L'Ultima Cena (Lultima Çena)], Hristiyan inanışına göre İsa'nın çarmıha gerilmesinden
                 önceki akşam havarileriyle yediği son yemek.Bu yemek sırasında yaptığı konuşmanın uzunca anlatıldığı
                 Yuhanna Kitabı'nda İsa Mesih onlara, kendisi
