--- a/travelwebsite.html
+++ b/travelwebsite.html
@@ -28,6 +28,10 @@
             </ul>
         </div>
     </header>
+    
+    <div class="car">
+        <img src="car.png.webp">
+    </div>
 
     <section class="home">
         <div class="hometext">
